crux-mir/test/symb_eval/alloc/out_of_bounds.good
test out_of_bounds/<DISAMB>::crux_test[0]: [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- out_of_bounds/<DISAMB>::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/alloc/out_of_bounds.rs:12:9: 12:24: error: in out_of_bounds/<DISAMB>::crux_test[0]
[Crux]   no value at offset 12, in aggregate of size 10
[Crux]   Context:
[Crux]     test/symb_eval/alloc/out_of_bounds.rs:12:9: 12:24: out_of_bounds/<DISAMB>::crux_test[0]
[Crux]     internal: _start
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/alloc/out_of_bounds.rs:12:9: 12:24: error: in out_of_bounds/<DISAMB>::crux_test[0]
[Crux]   attempted to read empty mux tree
[Crux]   Context:
[Crux]     test/symb_eval/alloc/out_of_bounds.rs:12:9: 12:24: out_of_bounds/<DISAMB>::crux_test[0]
[Crux]     internal: _start

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 2
[Crux]   Proved: 0
[Crux]   Disproved: 2
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
